manifest/wisecow-serivce.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4499
    nodePort: 30800
    protocol: TCP
  selector:
    app: wisecow
